--- a/lab4/q1.cfg
+++ b/lab4/q1.cfg
@@ -8,7 +8,7 @@
 -max:inst                         100000000 
 
 # l1 data cache config, i.e., {<config>|none}
--cache:dl1             dl1:64:64:1:f:1
+-cache:dl1             dl1:64:64:1:l:1
 
 # l2 data cache config, i.e., {<config>|none}
 -cache:dl2             none 
