--- a/lab4/q2.cfg
+++ b/lab4/q2.cfg
@@ -8,7 +8,7 @@
 -max:inst                         100000000 
 
 # l1 data cache config, i.e., {<config>|none}
--cache:dl1             dl1:64:64:1:f:64
+-cache:dl1             dl1:64:64:1:l:64
 
 # l2 data cache config, i.e., {<config>|none}
 -cache:dl2             none 
